01-namespaces.yaml
apiVersion: v1
#tipo de recurso
kind: Namespace
metadata:
  name: autenticacion
  labels:
    modulo: autenticacion

---
apiVersion: v1
kind: Namespace
metadata:
  name: agendamiento
  labels:
    modulo: agendamiento

---
apiVersion: v1
kind: Namespace
metadata:
  name: sala-espera
  labels:
    modulo: sala-espera

---
apiVersion: v1
kind: Namespace
metadata:
  name: videoconsulta
  labels:
    modulo: videoconsulta

---
apiVersion: v1
kind: Namespace
metadata:
  name: prescripcion
  labels:
    modulo: prescripcion

---
apiVersion: v1
kind: Namespace
metadata:
  name: notificaciones
  labels:
    modulo: notificaciones

---
apiVersion: v1
kind: Namespace
metadata:
  name: salud-mental
  labels:
    modulo: salud-mental
