09-emergencia-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emergencia
  labels:
    modulo: emergencia
