08d-cliente-autenticacion.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cliente
  namespace: autenticacion
  labels:
    tipo: cliente-prueba
    origen: autenticacion
spec:
  containers:
    - name: cliente
      image: curlimages/curl
      command:
        - sleep
        - "3600"
