11-medico-guardia-cliente.yaml
apiVersion: v1
kind: Pod
metadata:
  name: medico-guardia
  namespace: emergencia
  labels:
    tipo: cliente-prueba
    rol: medico-guardia
spec:
  containers:
    - name: cliente
      image: curlimages/curl
      command:
        - sleep
        - "3600"
