03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: salud-mental
  namespace: salud-mental
spec:
  selector:
    app: salud-mental
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: prescripcion
  namespace: prescripcion
spec:
  selector:
    app: prescripcion
  ports:
    - name: http
      port: 80
      targetPort: 8080
