08-autenticacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autenticacion
  namespace: autenticacion
spec:
  replicas: 1

  selector:
    matchLabels:
      app: autenticacion

  template:
    metadata:
      labels:
        app: autenticacion

    spec:
      containers:
        - name: servidor
          image: hashicorp/http-echo:1.0
          args:
            - "-listen=:8080"
            - "-text=Usuario autenticado - rol validado"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: autenticacion
  namespace: autenticacion
spec:
  selector:
    app: autenticacion

  ports:
    - name: http
      port: 80
      targetPort: 8080
