06-permitir-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-dns
  namespace: salud-mental
spec:
  podSelector: {}
  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              # kubectl get pods -n kube-system | grep coredns
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-dns
  namespace: prescripcion
spec:
  podSelector: {}
  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
