07-salud-mental-a-prescripcion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-egreso-prescripcion
  namespace: salud-mental

spec:
  podSelector:
    matchLabels:
      origen: salud-mental

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              modulo: prescripcion

          podSelector:
            matchLabels:
              app: prescripcion

      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-ingreso-salud-mental
  namespace: prescripcion

spec:
  podSelector:
    matchLabels:
      app: prescripcion

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              modulo: salud-mental

          podSelector:
            matchLabels:
              origen: salud-mental

      ports:
        - protocol: TCP
          port: 8080
