08a-default-deny-autenticacion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: autenticacion

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
