12-default-deny-emergencia.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: emergencia

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
